# OpticApplication

./: .gitignore  .gitmodules  1  1121  2  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run.sh
examples/: cubes  spheres  statue
inc/: Button.hpp  SceneWidgets.hpp  ScrollBar.h  TextWidget.hpp
include/: BasicWidgets.hpp  Buttons.hpp  Containers.hpp  CustomWidgets.hpp  DropDownMenu.hpp  EditorWidget.hpp  MainWindow.hpp  ObjectsPanel.hpp  PPColorPicker.hpp  PPWidgets.hpp  PropertiesPanel.hpp  ROACommon.hpp  ROAGUIRender.hpp  ROARAII.hpp  ROAUI.hpp  RecordsPanel.hpp  SceneWidgets.hpp  ScrollBar.hpp  TextWidgets.hpp  ViewPort3D.hpp  ViewPortWindow.hpp  Viewport3D.hpp  Window.hpp
include/BasicWidgets/: Buttons.hpp  Containers.hpp  Desktop.hpp  MainWindow.hpp  ScrollBar.hpp  TextWidgets.hpp  TextWindow.hpp  Window.hpp
include/CompositeWidgets/: DropDownMenu.hpp  EditorWidget.hpp  Outliner.hpp  PropertiesPanel.hpp  RecordsPanel.hpp
include/CustomWidgets/: MainMenuItems.hpp  OpticDesktop.hpp
include/PP/: PPColorPicker.hpp  PPWidgets.hpp
include/RayTracerWidgets/: Viewport3D.hpp
include/SVGParser/: SVGImageConverter.hpp
include/Utilities/: ROACommon.hpp  ROAGUIRender.hpp
sceneExamples/: 2  3  mini  polyTown
source/: ROACommon.cpp
source/CustomWidgets/: MainMenuItems.cpp  OpticDesktop.cpp
source/SVGParser/: SVGImageConverter.cpp
source/Utilities/: ROACommon.cpp  SVGImageConverter.cpp
